--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--<?import com.jfoenix.controls.JFXButton?>-->
+
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.HelloController">
+<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.controller.MainMenuController">
    <children>
       <Rectangle fill="WHITE" height="784.0" stroke="#f2e8c6" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
       <Rectangle fill="#982b1c" height="78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
@@ -20,35 +25,32 @@
             <Font name="Gill Sans MT" size="67.0" />
          </font>
       </Text>
-      <ScrollPane id="scroll-pane" hbarPolicy="NEVER" layoutX="27.0" layoutY="95.0" prefHeight="596.0" prefWidth="194.0" stylesheets="@css/style.css" vbarPolicy="NEVER">
+      <ScrollPane id="scroll-pane" fx:id="leftScroll" hbarPolicy="NEVER" layoutX="27.0" layoutY="95.0" prefHeight="596.0" prefWidth="194.0" stylesheets="@css/style.css" vbarPolicy="NEVER">
          <content>
-          <AnchorPane id="background" fx:id="rightScrollPane" minHeight="0.0" minWidth="0.0" prefHeight="1000.0">
+          <AnchorPane id="background" minHeight="0.0" minWidth="0.0" prefHeight="1000.0" prefWidth="193.0">
                <children>
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" layoutX="14.0" layoutY="18.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" layoutX="14.0" layoutY="214.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" layoutX="13.0" layoutY="410.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" layoutX="13.0" layoutY="606.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" layoutX="14.0" layoutY="806.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
+                  <VBox alignment="CENTER" prefHeight="596.0" prefWidth="194.0" spacing="20.0">
+                     <children>
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </VBox>
                </children></AnchorPane>
          </content>
       </ScrollPane>
-      <ScrollPane id="background1" hbarPolicy="NEVER" layoutX="244.0" layoutY="158.0" prefHeight="534.0" prefWidth="1279.0"  vbarPolicy="NEVER">
+      <ScrollPane id="background1" fx:id="scroll" hbarPolicy="NEVER" layoutX="244.0" layoutY="158.0" prefHeight="534.0" prefWidth="1279.0" vbarPolicy="NEVER">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="966.0" prefWidth="1278.0" style="-fx-background: transparent;" >
-               <children>
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="36.0" layoutY="27.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="347.0" layoutY="27.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="662.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="973.0" layoutY="31.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="37.0" layoutY="347.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="348.0" layoutY="347.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="663.0" layoutY="348.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="974.0" layoutY="351.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="37.0" layoutY="672.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="348.0" layoutY="672.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="663.0" layoutY="673.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="281.0" layoutX="974.0" layoutY="676.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="269.0" />
-               </children></AnchorPane>
+            <GridPane fx:id="grid" prefHeight="0.0" prefWidth="0.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+            </GridPane>
          </content>
       </ScrollPane>
       <Rectangle fill="WHITE" height="102.0" layoutX="-1.0" layoutY="691.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
@@ -89,10 +91,10 @@
             <Font name="Gill Sans MT" size="15.0" />
          </font>
       </Label>
-      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">
-         <font>
-            <Font name="Gill Sans MT" size="15.0" />
-         </font>
-      </JFXButton>
+<!--      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">-->
+<!--         <font>-->
+<!--            <Font name="Gill Sans MT" size="15.0" />-->
+<!--         </font>-->
+<!--      </JFXButton>-->
    </children>
 </AnchorPane>
