--- a/src/main/resources/org/example/softfun_funsoft/Item.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Item.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.softfun_funsoft.ItemController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="300.0" prefWidth="332.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemController">
+   <children>
+      <ImageView fx:id="img" fitHeight="200.0" fitWidth="273.0" layoutX="65.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../pic_resources/Chicken%20Spicy.jpg" />
+         </image>
+      </ImageView>
+      <Label fx:id="nameLabel" layoutX="27.0" layoutY="241.0" prefHeight="20.0" prefWidth="111.0" text="WanPiece Chicken" />
+      <Label fx:id="priceLabel" layoutX="223.0" layoutY="243.0" prefHeight="17.0" prefWidth="57.0" text="₱ 99.0" />
+   </children>
 </AnchorPane>
