--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.controller.MainMenuController">
+<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.MainMenuController">
    <children>
       <Rectangle fill="WHITE" height="784.0" stroke="#f2e8c6" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
       <Rectangle fill="#982b1c" height="78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
@@ -29,14 +29,7 @@
          <content>
           <AnchorPane id="background" minHeight="0.0" minWidth="0.0" prefHeight="1000.0" prefWidth="193.0">
                <children>
-                  <VBox alignment="CENTER" prefHeight="596.0" prefWidth="194.0" spacing="20.0">
-                     <children>
-                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#f2e8c6" height="175.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="161.0" />
-                     </children>
+                  <VBox fx:id="vbox" alignment="TOP_CENTER" prefHeight="596.0" prefWidth="194.0" spacing="20.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -46,10 +39,10 @@
       </ScrollPane>
       <ScrollPane id="background1" fx:id="scroll" hbarPolicy="NEVER" layoutX="244.0" layoutY="158.0" prefHeight="534.0" prefWidth="1279.0" vbarPolicy="NEVER">
          <content>
-            <GridPane fx:id="grid" prefHeight="0.0" prefWidth="0.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
+            <GridPane fx:id="grid" prefHeight="0.0" prefWidth="40.0">
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" />
+               </rowConstraints>
             </GridPane>
          </content>
       </ScrollPane>
