--- a/src/main/resources/org/example/softfun_funsoft/ItemCategory.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/ItemCategory.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.softfun_funsoft.ItemCategory"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="173.0" prefWidth="184.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemCategoryController">
+   <children>
+      <VBox alignment="CENTER" layoutX="32.0" layoutY="132.0" prefHeight="31.0" prefWidth="122.0">
+         <children>
+            <HBox prefHeight="25.0" prefWidth="200.0">
+               <children>
+                  <Label fx:id="categoryLabel" prefHeight="20.0" prefWidth="96.0" text="Chicken Meals">
+                     <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <ImageView fx:id="img" fitHeight="122.0" fitWidth="149.0" layoutX="32.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../pic_resources/Chicken%20Spicy.jpg" />
+         </image>
+      </ImageView>
+   </children>
+   <styleClass>
+      <String fx:value="fruit-item" />
+      <String fx:value="shadow" />
+   </styleClass>
 </AnchorPane>
