--- a/src/main/resources/org/example/softfun_funsoft/Item.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Item.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="259.0" prefWidth="252.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemController">
+<AnchorPane onMousePressed="#onClicked" prefHeight="259.0" prefWidth="252.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemController">
    <children>
       <VBox alignment="CENTER" layoutX="26.0" layoutY="216.0" prefHeight="31.0" prefWidth="200.0">
          <children>
