--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -2,8 +2,10 @@
 
 <!--<?import com.jfoenix.controls.JFXButton?>-->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,7 +18,7 @@
 
 <AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.MainMenuController">
    <children>
-      <Rectangle fill="WHITE" height="784.0" stroke="#f2e8c6" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
+      <Rectangle fill="WHITE" height="784.0" stroke="#f2e8c6" strokeType="INSIDE" strokeWidth="0.0" width="1548.0" />
       <Rectangle fill="#982b1c" height="78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1548.0" />
       <Text layoutX="338.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="All Time Favourites" wrappingWidth="611.4736022949219">
          <font>
@@ -79,6 +81,40 @@
             <Font name="Gill Sans MT" size="15.0" />
          </font>
       </Label>
+      <AnchorPane fx:id="orderPanel" layoutX="337.0" layoutY="402.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="1186.0" style="-fx-background-color: pink;" visible="false">
+         <children>
+            <Label layoutX="70.0" layoutY="28.0" prefHeight="36.0" prefWidth="284.0" text="Make Your Choice">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Label>
+            <Button layoutX="918.0" layoutY="26.0" mnemonicParsing="false" onMousePressed="#cancelButton" prefHeight="36.0" prefWidth="230.0" text="Cancel">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="185.0" fitWidth="265.0" layoutX="504.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/Reg%20Burger.jpg" />
+               </image>
+            </ImageView>
+            <TextField editable="false" layoutX="565.0" layoutY="237.0" prefHeight="25.0" prefWidth="46.0" />
+            <Label layoutX="565.0" layoutY="220.0" text="Quantity" />
+            <Button layoutX="544.0" layoutY="237.0" mnemonicParsing="false" text="-" />
+            <Button layoutX="611.0" layoutY="237.0" mnemonicParsing="false" text="+" />
+            <Button layoutX="918.0" layoutY="217.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="230.0" text="Add to Cart">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Button>
+            <Label fx:id="confirmPanelItemname" layoutX="301.0" layoutY="66.0" prefHeight="26.0" prefWidth="134.0" text="Cheese Borgier">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="orderPanelItemPrice" layoutX="354.0" layoutY="99.0" text="PHP 100" />
+         </children>
+      </AnchorPane>
 <!--      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">-->
 <!--         <font>-->
 <!--            <Font name="Gill Sans MT" size="15.0" />-->
