--- a/src/main/resources/org/example/softfun_funsoft/PaymentTypes.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/PaymentTypes.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.softfun_funsoft.PaymentTypes"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="788.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.DineInOrTakeout">
+    <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="MAROON" height="788.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" width="1542.0" />
+        <Label layoutX="530.0" layoutY="133.0" text="How would you like to pay?" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="30.0" />
+            </font>
+        </Label>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="350.0" layoutX="420.0" layoutY="209.0" stroke="BLACK" strokeType="INSIDE" width="300.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="350.0" layoutX="767.0" layoutY="208.0" stroke="BLACK" strokeType="INSIDE" width="300.0" />
+      <ImageView fitHeight="310.0" fitWidth="263.0" layoutX="439.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="309.0" fitWidth="258.0" layoutX="787.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" />
+    </children>
 </AnchorPane>
