--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -42,11 +42,6 @@
       <Rectangle fill="#f2e8c6" height="26.0" layoutX="-31.0" layoutY="692.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1573.0" />
       <Circle fill="WHITE" layoutX="1074.0" layoutY="121.0" radius="24.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Circle fill="WHITE" layoutX="1460.0" layoutY="121.0" radius="24.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
-      <ImageView fitHeight="34.0" fitWidth="38.0" layoutX="1428.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../pic_resources/search.png" />
-         </image>
-      </ImageView>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="RED" height="52.0" layoutX="41.0" layoutY="730.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
       <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="48.0" layoutX="43.0" layoutY="732.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="385.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#399918" height="52.0" layoutX="1103.0" layoutY="730.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
@@ -84,11 +79,11 @@
                   <Image url="@../../../pic_resources/Reg%20Burger.jpg" />
                </image>
             </ImageView>
-            <TextField editable="false" layoutX="565.0" layoutY="237.0" prefHeight="25.0" prefWidth="46.0" />
-            <Label layoutX="565.0" layoutY="220.0" text="Quantity" />
-            <Button layoutX="544.0" layoutY="237.0" mnemonicParsing="false" text="-" />
-            <Button layoutX="611.0" layoutY="237.0" mnemonicParsing="false" text="+" />
-            <Button layoutX="918.0" layoutY="217.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="230.0" text="Add to Cart">
+            <TextField fx:id="quantity" alignment="CENTER" editable="false" layoutX="565.0" layoutY="237.0" prefHeight="25.0" prefWidth="46.0" text="1" />
+            <Label accessibleText="1" contentDisplay="CENTER" layoutX="565.0" layoutY="220.0" text="Quantity" />
+            <Button fx:id="subtractQuantity" layoutX="545.0" layoutY="236.0" mnemonicParsing="false" onAction="#setSubtractQuantity" text="-" />
+            <Button fx:id="addQuantity" layoutX="610.0" layoutY="236.0" mnemonicParsing="false" onAction="#setAddQuantity" text="+" />
+            <Button fx:id="addToCart" layoutX="918.0" layoutY="217.0" mnemonicParsing="false" onAction="#setAddToCart" prefHeight="36.0" prefWidth="230.0" text="Add to Cart">
                <font>
                   <Font size="19.0" />
                </font>
