--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -57,7 +57,7 @@
             <Font name="Gill Sans MT" size="30.0" />
          </font>
       </Text>
-      <Label layoutX="43.0" layoutY="696.0" text="2 items in the list">
+      <Label fx:id="itemsLabel" layoutX="54.0" layoutY="696.0" text="No items in the cart">
          <font>
             <Font name="Gill Sans MT" size="15.0" />
          </font>
