--- a/src/main/resources/org/example/softfun_funsoft/ItemCategory.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/ItemCategory.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMousePressed="#onClicked" prefHeight="173.0" prefWidth="184.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.controller.ItemCategoryController">
+<AnchorPane onMousePressed="#onClicked" prefHeight="173.0" prefWidth="184.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemCategoryController">
    <children>
       <VBox alignment="CENTER" layoutX="32.0" layoutY="132.0" prefHeight="31.0" prefWidth="122.0">
          <children>
