--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="mainAnchorpane" prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.controller.MainMenuController">
+<AnchorPane fx:id="mainAnchorpane" prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.MainMenuController">
    <children>
       <Rectangle fill="WHITE" height="784.0" stroke="#f2e8c6" strokeType="INSIDE" strokeWidth="0.0" width="1548.0" />
       <Rectangle fill="#982b1c" height="78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1548.0" />
@@ -31,7 +31,7 @@
       </ScrollPane>
       <ScrollPane id="background1" fx:id="scroll" hbarPolicy="NEVER" layoutX="337.0" layoutY="158.0" prefHeight="534.0" prefWidth="1186.0" vbarPolicy="NEVER">
          <content>
-            <GridPane fx:id="grid" alignment="CENTER" prefHeight="0.0" prefWidth="40.0">
+            <GridPane fx:id="grid" prefHeight="0.0" prefWidth="40.0">
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" />
                </rowConstraints>
@@ -76,7 +76,7 @@
             </Button>
             <ImageView fx:id="confirmPanelImg" fitHeight="185.0" fitWidth="265.0" layoutX="504.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../pic_resources/Reg%20Burger.jpg" />
+                  <Image url="@../../../pic_resources/Sides/Nuggets.jpg" />
                </image>
             </ImageView>
             <TextField fx:id="quantity" alignment="CENTER" editable="false" layoutX="565.0" layoutY="237.0" prefHeight="25.0" prefWidth="46.0" text="1" />
@@ -101,7 +101,7 @@
             <Font size="23.0" />
          </font>
       </TextField>
-      <Label fx:id="mainHeader" layoutX="340.0" layoutY="88.0" text="All Time Favourite">
+      <Label fx:id="mainHeader" layoutX="340.0" layoutY="81.0" prefHeight="80.0" prefWidth="553.0" text="All Time Favourites">
          <font>
             <Font name="Gill Sans MT" size="67.0" />
          </font>
