--- a/src/main/resources/org/example/softfun_funsoft/Item.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Item.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -14,22 +13,21 @@
    <children>
       <VBox alignment="CENTER" layoutX="26.0" layoutY="216.0" prefHeight="31.0" prefWidth="200.0">
          <children>
-            <HBox prefHeight="25.0" prefWidth="200.0">
+            <HBox prefHeight="25.0" prefWidth="262.0">
                <children>
-                  <Label fx:id="nameLabel" prefHeight="20.0" prefWidth="111.0" text="WanPiece Chicken">
+                  <Label fx:id="nameLabel" prefHeight="20.0" prefWidth="190.0" text="WanPiece Chicken">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Pane prefHeight="17.0" prefWidth="49.0" />
-                  <Label fx:id="priceLabel" prefHeight="17.0" prefWidth="39.0" text="₱ 99.0" />
+                  <Label fx:id="priceLabel" prefHeight="17.0" prefWidth="64.0" text="₱ 99.0" />
                </children>
             </HBox>
          </children>
       </VBox>
       <ImageView fx:id="img" fitHeight="200.0" fitWidth="258.0" layoutX="26.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../pic_resources/Chicken%20Spicy.jpg" />
+            <Image url="@../../../pic_resources/beverages/frozenfanta.jpg" />
          </image>
       </ImageView>
    </children>
