--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -40,14 +40,14 @@
          </content>
       </ScrollPane>
       <Rectangle fill="WHITE" height="102.0" layoutX="-1.0" layoutY="691.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
-      <Rectangle fill="#f2e8c6" height="26.0" layoutX="-31.0" layoutY="692.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1573.0" />
+      <Rectangle fill="#f7cc2a" height="26.0" layoutX="-24.0" layoutY="691.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1573.0" />
       <Circle fill="WHITE" layoutX="1074.0" layoutY="121.0" radius="24.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Circle fill="WHITE" layoutX="1460.0" layoutY="121.0" radius="24.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="RED" height="52.0" layoutX="41.0" layoutY="730.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
       <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="48.0" layoutX="43.0" layoutY="732.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="385.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#399918" height="52.0" layoutX="1103.0" layoutY="730.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
       <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="48.0" layoutX="1105.0" layoutY="732.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="385.0" />
-      <Text fill="#399918" layoutX="1166.0" layoutY="766.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Proceed to Checkout">
+      <Text fill="#399918" layoutX="1264.0" layoutY="766.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add">
          <font>
 
             <Font name="Gill Sans MT" size="30.0" />
@@ -114,8 +114,8 @@
             <Font name="Rage Italic" size="67.0" />
          </font>
       </Text>
-      <JFXButton fx:id="addToCart" layoutX="1105.0" layoutY="729.0" onAction="#setAddToCart" prefHeight="52.0" prefWidth="389.0" text="." textFill="WHITE" />
-      <JFXButton layoutX="41.0" layoutY="729.0" onMousePressed="#cancelButton" prefHeight="52.0" prefWidth="389.0" text="." textFill="WHITE" />
+      <JFXButton fx:id="addToCart" layoutX="1102.0" layoutY="728.0" onAction="#setAddToCart" prefHeight="52.0" prefWidth="389.0" text="." />
+      <JFXButton layoutX="41.0" layoutY="729.0" onMousePressed="#cancelButton" prefHeight="52.0" prefWidth="390.0" text="." textFill="WHITE" />
 <!--      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">-->
 <!--         <font>-->
 <!--            <Font name="Gill Sans MT" size="15.0" />-->
