--- a/src/main/resources/org/example/softfun_funsoft/ItemCategory.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/ItemCategory.fxml
@@ -9,26 +9,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMousePressed="#onClicked" prefHeight="173.0" prefWidth="184.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemCategoryController">
+<AnchorPane onMousePressed="#onClicked" prefHeight="221.0" prefWidth="204.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ItemCategoryController">
    <children>
       <VBox alignment="CENTER" layoutX="32.0" layoutY="132.0" prefHeight="31.0" prefWidth="122.0">
          <children>
-            <HBox prefHeight="25.0" prefWidth="200.0">
-               <children>
-                  <Label fx:id="categoryLabel" prefHeight="20.0" prefWidth="121.0" text="Chicken Meals">
-                     <font>
-                        <Font name="System Bold Italic" size="12.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
+            <HBox prefHeight="25.0" prefWidth="200.0" />
          </children>
       </VBox>
-      <ImageView fx:id="img" fitHeight="122.0" fitWidth="149.0" layoutX="32.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="img" fitHeight="150.0" fitWidth="173.0" layoutX="29.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../pic_resources/Chicken%20Spicy.jpg" />
+            <Image url="@../../../pic_resources/Burgers/chickensandwich.jpg" />
          </image>
       </ImageView>
+      <Label fx:id="categoryLabel" layoutX="26.0" layoutY="184.0" prefHeight="20.0" prefWidth="121.0" text="Chicken Meals">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
    </children>
    <styleClass>
       <String fx:value="fruit-item" />
